Update to get magick to write into Readme_files

--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -235,8 +235,11 @@ pomological_iris <- basic_iris_plot +
 pomological_iris 
 
 # Painted!
-paint_pomological(pomological_iris, res = 110)
+paint_pomological(pomological_iris, res = 110) %>% 
+  magick::image_write("Readme_files/figure-gfm/plot-demo-painted.png")
 ```
+
+![](Readme_files/figure-gfm/plot-demo-painted.png)
 
 ### Stacked bar chart
 
@@ -255,8 +258,11 @@ stacked_bar_plot + pomological_theme()
 paint_pomological(
   stacked_bar_plot + pomological_theme_nobg(),
   res = 110
-)
+) %>% 
+  magick::image_write("Readme_files/figure-gfm/plot-bar-chart-painted.png")
 ```
+
+![](Readme_files/figure-gfm/plot-bar-chart-painted.png)
 
 ### Density Plot
 
@@ -275,15 +281,18 @@ density_plot + pomological_theme()
 paint_pomological(
   density_plot + pomological_theme_nobg(),
   res = 110
-)
+) %>% 
+  magick::image_write("Readme_files/figure-gfm/plot-density-demo-painted.png")
 ```
+
+![](Readme_files/figure-gfm/plot-density-demo-painted.png)
 
 
 ### Points and lines
 
 Data from the Texas Housing
 
-```{r plot-points-lines}
+```{r plot-full-bar-stack}
 big_volume_cities <- txhousing %>% 
   group_by(city) %>% 
   summarize(mean_volume = mean(volume, na.rm = TRUE)) %>% 
@@ -291,7 +300,7 @@ big_volume_cities <- txhousing %>%
   top_n(length(pomological_palette)) %>% 
   pull(city)
 
-point_line_plot <- txhousing %>% 
+full_bar_stack_plot <- txhousing %>% 
   filter(city %in% big_volume_cities) %>% 
   group_by(city, year) %>% 
   summarize(mean_volume = mean(volume, na.rm = TRUE)) %>% 
@@ -304,13 +313,16 @@ point_line_plot <- txhousing %>%
   theme(panel.grid.minor.x = element_blank()) +
   scale_fill_pomological()
 
-point_line_plot + pomological_theme()
+full_bar_stack_plot + pomological_theme()
 
 paint_pomological(
-  point_line_plot + pomological_theme_nobg(),
+  full_bar_stack_plot + pomological_theme_nobg(),
   res = 110
-)
+) %>% 
+  magick::image_write("Readme_files/figure-gfm/plot-full-bar-stack-painted.png")
 ```
+
+![](Readme_files/figure-gfm/plot-full-bar-stack-painted.png)
 
 ### One last plot
 
@@ -328,8 +340,11 @@ ridges_pomological <- ggplot(diamonds) +
   scale_fill_pomological() + 
   scale_color_pomological()
 
-paint_pomological(ridges_pomological, res = 110)
+paint_pomological(ridges_pomological, res = 110) %>% 
+  magick::image_write("Readme_files/figure-gfm/plot-ridges-painted.png")
 ```
+
+![](Readme_files/figure-gfm/plot-ridges-painted.png)
 
 
 
