--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -69,8 +69,9 @@ There are three theme-generating functions:
 
 A handwriting font is needed for the fully authentic pomological look, and I found a few from Google Fonts that fit the bill.
 
+- [Mr. De Haviland](https://fonts.google.com/specimen/Mr+De+Haviland)
 - [Homemade Apple](https://fonts.google.com/specimen/Homemade+Apple/)
-- [Amatic SC](https://fonts.google.com/specimen/Amatic+SC/)
+- [Marck Script](https://fonts.google.com/specimen/Marck+Script/)
 - [Mr. Bedfort](https://fonts.google.com/specimen/Mr+Bedfort/)
 
 Alternatively, use something like [calligrapher.com](https://www.calligraphr.com/) to create your own handwriting font!
@@ -111,19 +112,21 @@ basic_iris_plot <- ggplot(iris) +
 # Just your standard Iris plot
 basic_iris_plot 
 
-# With pomological theme
-basic_iris_plot +
-  theme_pomological() +
+# With pomological colors
+basic_iris_plot <- basic_iris_plot +
   scale_color_pomological()
+basic_iris_plot
+
+# With pomological theme
+pomological_iris <- basic_iris_plot + theme_pomological()
 
 # With transparent background
-pomological_iris <- basic_iris_plot +
-  theme_pomological_nobg() +
-  scale_color_pomological()
-pomological_iris 
+basic_iris_plot +
+  theme_pomological_nobg() 
 
-# Without fonts
-pomological_iris + theme_pomological_plain()
+# Or with "plain" pomological
+basic_iris_plot +
+  theme_pomological_plain() 
 
 # Painted!
 paint_pomological(pomological_iris, res = 110) %>% 
@@ -141,6 +144,7 @@ stacked_bar_plot <- ggplot(diamonds) +
   geom_histogram(binwidth = 850) + 
   xlab('Price (USD)') + 
   ylab('Count') + 
+  ggtitle("ggpomological") +
   scale_x_continuous(label = scales::dollar_format()) +
   scale_fill_pomological()
 
