--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -33,6 +33,8 @@ This package provides a ggplot2 theme inspired by the [USDA Pomological Watercol
 
 ## Installation
 
+This package isn't on CRAN, so you'll need to use the devtools package to install it.
+
 ```r
 # If you don't have devtools installed
 install.packages("devtools")
@@ -94,7 +96,7 @@ In the future, I might revisit this package to
 
 ## Demo!
 
-We'll need dplyr and ggplot2 (loaded with **ggpomological**)
+We'll need ggplot2 (loaded with **ggpomological**) and dplyr
 
 ```r
 library(ggpomological)
@@ -113,20 +115,18 @@ basic_iris_plot <- ggplot(iris) +
 basic_iris_plot 
 
 # With pomological colors
-basic_iris_plot <- basic_iris_plot +
-  scale_color_pomological()
+basic_iris_plot <- basic_iris_plot + scale_color_pomological()
 basic_iris_plot
 
 # With pomological theme
 pomological_iris <- basic_iris_plot + theme_pomological()
+pomological_iris
 
 # With transparent background
-basic_iris_plot +
-  theme_pomological_nobg() 
+basic_iris_plot + theme_pomological_nobg() 
 
 # Or with "plain" pomological
-basic_iris_plot +
-  theme_pomological_plain() 
+basic_iris_plot + theme_pomological_plain() 
 
 # Painted!
 paint_pomological(pomological_iris, res = 110) %>% 
