--- a/Readme.Rmd
+++ b/Readme.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Pomological Colors"
 author: "Garrick Aden-Buie"
-date: "2/4/2018"
 output: github_document
 editor_options: 
   chunk_output_type: console
@@ -12,8 +11,6 @@ knitr::opts_chunk$set(echo = TRUE, fig.width=8, fig.height=5)
 library(ggpomological)
 library(dplyr)
 ```
-
-## Pomological Plots
 
 
 <!-- Links -->
@@ -38,7 +35,7 @@ readr::read_tsv("https://cs.joensuu.fi/sipu/datasets/Compound.txt", col_names = 
       labs(x = "Space", y = "Time", 
            color = "Fruit", title = "ggpomological") +
       scale_color_pomological() + 
-      theme_pomological()
+      theme_pomological_fancy()
   } %>% 
   paint_pomological(res = 110) %>% 
   magick::image_write("Readme_files/figure-gfm/ggpomological.png")
@@ -46,7 +43,7 @@ readr::read_tsv("https://cs.joensuu.fi/sipu/datasets/Compound.txt", col_names = 
 
 ![](Readme_files/figure-gfm/ggpomological.png)
 
-![](Readme_files/pom-examples.jpg)
+![](Readme_files/pom-examples.jpg)^[U.S. Department of Agriculture Pomological Watercolor Collection. Rare and Special Collections, National Agricultural Library, Beltsville, MD 20705]
 
 ## Installation
 
@@ -82,18 +79,10 @@ There are three theme-generating functions:
 
 - `theme_pomological()` sets the plot theme to be representative of the paper and styling of the watercolors and includes a paper-colored background, 
 
-- `theme_pomological_nobg()` has the same styling, just with a transparent (or white) background,
+- `theme_pomological_plain()` has the same styling, just with a transparent (or white) background,
 
-- `theme_pomological_plain()` has a white background and doesn't change the font unless requested.
+- `theme_pomological_fancy()` has the paper-colored background and defaults to a fancy handwritten font ([Homemade Apple](https://fonts.google.com/specimen/Homemade+Apple/)).
 
-A handwriting font is needed for the fully authentic pomological look, and I found a few from Google Fonts that fit the bill.
-
-- [Mr. De Haviland](https://fonts.google.com/specimen/Mr+De+Haviland)
-- [Homemade Apple](https://fonts.google.com/specimen/Homemade+Apple/)
-- [Marck Script](https://fonts.google.com/specimen/Marck+Script/)
-- [Mr. Bedfort](https://fonts.google.com/specimen/Mr+Bedfort/)
-
-Alternatively, use something like [calligrapher.com](https://www.calligraphr.com/) to create your own handwriting font!
 
 For color and fill scales, **ggpomological** provides `scale_color_pomological()` and `scale_fill_pomological()`.
 
@@ -105,6 +94,19 @@ In the future, I might revisit this package to
 
 3. Set up continuous scale colors (we'll see...)
 
+## Fonts
+
+A handwriting font is needed for the fully authentic pomological look, and I found a few from Google Fonts that fit the bill.
+
+- [Mr. De Haviland](https://fonts.google.com/specimen/Mr+De+Haviland)
+- [Homemade Apple](https://fonts.google.com/specimen/Homemade+Apple/)
+- [Marck Script](https://fonts.google.com/specimen/Marck+Script/)
+- [Mr. Bedfort](https://fonts.google.com/specimen/Mr+Bedfort/)
+
+Alternatively, use something like [calligrapher.com](https://www.calligraphr.com/) to create your own handwriting font!
+
+But fonts can be painful in R, so the base functions -- `theme_pomological()` and `theme_pomological_plain()` -- don't change the font by default.
+To opt into the full pomological effect, use `theme_pomological_fancy()` which is just an alias for `theme_pomological(base_family = "Homemade Apple", base_size = 16)`.
 
 ## Add paper background!
 
@@ -119,6 +121,8 @@ We'll need ggplot2 (loaded with **ggpomological**) and dplyr
 library(ggpomological)
 library(dplyr)
 ```
+
+**Warning**: If you don't have the [above fonts](#fonts) installed, you'll get an error message with a lot of warnings when running the below examples. Just replace `theme_pomological("Homemade Apple", 16)` with `theme_pomological()` for the basic theme without the crazy fonts.
 
 ### Basic iris plot
 
@@ -136,14 +140,13 @@ basic_iris_plot <- basic_iris_plot + scale_color_pomological()
 basic_iris_plot
 
 # With pomological theme
-pomological_iris <- basic_iris_plot + theme_pomological()
-pomological_iris
+basic_iris_plot + theme_pomological()
 
 # With transparent background
-basic_iris_plot + theme_pomological_nobg() 
-
-# Or with "plain" pomological
 basic_iris_plot + theme_pomological_plain() 
+
+# Or with "fancy" pomological settings
+pomological_iris <- basic_iris_plot + theme_pomological_fancy()
 
 # Painted!
 paint_pomological(pomological_iris, res = 110) %>% 
@@ -165,10 +168,10 @@ stacked_bar_plot <- ggplot(diamonds) +
   scale_x_continuous(label = scales::dollar_format()) +
   scale_fill_pomological()
 
-stacked_bar_plot + theme_pomological()
+stacked_bar_plot + theme_pomological("Homemade Apple", 16)
 
 paint_pomological(
-  stacked_bar_plot + theme_pomological_nobg(),
+  stacked_bar_plot + theme_pomological_fancy(),
   res = 110
 ) %>% 
   magick::image_write("Readme_files/figure-gfm/plot-bar-chart-painted.png")
@@ -188,10 +191,10 @@ density_plot <- mtcars %>%
   scale_color_pomological() +
   scale_fill_pomological()
 
-density_plot + theme_pomological()
+density_plot + theme_pomological("Homemade Apple", 16)
 
 paint_pomological(
-  density_plot + theme_pomological_nobg(),
+  density_plot + theme_pomological_fancy(),
   res = 110
 ) %>% 
   magick::image_write("Readme_files/figure-gfm/plot-density-demo-painted.png")
@@ -225,10 +228,10 @@ full_bar_stack_plot <- txhousing %>%
   theme(panel.grid.minor.x = element_blank()) +
   scale_fill_pomological()
 
-full_bar_stack_plot + theme_pomological()
+full_bar_stack_plot + theme_pomological("Homemade Apple", 16)
 
 paint_pomological(
-  full_bar_stack_plot + theme_pomological_nobg(),
+  full_bar_stack_plot + theme_pomological_fancy(),
   res = 110
 ) %>% 
   magick::image_write("Readme_files/figure-gfm/plot-full-bar-stack-painted.png")
@@ -244,7 +247,7 @@ Using my own handwriting and the `ggridges` package.
 ridges_pomological <- ggplot(diamonds) + 
   aes(x = carat, y = clarity, color = clarity, fill = clarity) + 
   ggridges::geom_density_ridges(alpha = 0.75) + 
-  theme_pomological_nobg(
+  theme_pomological(
     base_family = 'gWriting',
     base_size = 20,
     base_theme = ggridges::theme_ridges()
